fixes for user signup

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -134,7 +134,7 @@ h4 {
 }
 .navbar {
   margin-bottom: 0;
-  background-color: #E599FF;//f4511e;
+  background-color: #21b9dd;//f4511e;
   z-index: 9999;
   border: 0;
   font-size: 12px !important;
@@ -163,7 +163,7 @@ h4 {
   z-index: 9999;
   top: 0;
   left: 0;
-  background-color: #ff0066;
+  background-color: #21b9fe;
   overflow-x: hidden;
   padding-top: 60px;
 }
