--- a/app/views/role/super_admin_dashboards/index.html.erb
+++ b/app/views/role/super_admin_dashboards/index.html.erb
@@ -1,4 +1,5 @@
 <%#= render 'partials/dashboard_nav'%>
+<% if signed_in %>
 
 
 <div  id="main">
@@ -10,8 +11,5 @@
 
 <%= render 'nav_dash_board'%>
 
-<%#if @_current_user %>
-
-<%#end%>
-<%#= render 'nav_dash_board' %>
+<%end%>
 
