--- a/app/views/role/customers/_customer_side_nav.html.erb
+++ b/app/views/role/customers/_customer_side_nav.html.erb
@@ -7,13 +7,11 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
     <ul >
-          <li><a href="#" class="customer-info">Customer Info</a></li> <%#= link_to "Customer Info", role_customers_path %>
+          <li id="customer"><a href="#customer-info" >Customer Info</a></li> <%#= link_to "Customer Info", role_customers_path %>
           <li><a href="#" class="default-view"> <%= link_to "Edit Customer Info", edit_role_customer_path(current_user) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
-
-
           <!--</div> &lt;!&ndash;   end of sidebar&ndash;&gt;-->
           </div>
           </div>
