--- a/app/views/role/customers/index.html.erb
+++ b/app/views/role/customers/index.html.erb
@@ -2,12 +2,16 @@
 <a class="sidenav-toggle-btn">
   <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 </a>
-
+<div id="customer-body">
 <h1 id="default-view">Customer Management</h1>
-
+</div>
 
 <%= render 'customer_side_nav' %>
-<%= render 'partials/customer_info_table' %>
+<div id="customer-info ">
+
+  <%= render 'partials/customer_info_table' %>
+
+</div>
 
 
 
