--- a/app/views/role/customers/_customer_side_nav.html.erb
+++ b/app/views/role/customers/_customer_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li id="customer"><a href="#customer-info" >Customer Info</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit Customer Info", edit_role_customer_path(current_user) %></a></li>
+          <li><a href="#" class="default-view"> <%= link_to "Edit Customer Info", edit_role_customer_path(@profiles[:id]) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
