fixes for customer management for ticket- JFADM-5

--- a/app/views/role/customers/_customer_side_nav.html.erb
+++ b/app/views/role/customers/_customer_side_nav.html.erb
@@ -9,8 +9,8 @@
     <ul >
           <li id="customer"><a href="#customer-info" >Customer Info</a></li> <%#= link_to "Customer Info", role_customers_path %>
           <li><a href="#" class="default-view"> <%= link_to "Edit Customer Info", edit_role_customer_path(@profiles[:id]) %></a></li>
-          <li><a href="#">View all Product</a></li>
-          <li><a href="#">Edit Product</a></li>
+          <!--<li><a href="#" >View all Product</a></li>-->
+          <!--<li><a href="#">Edit Product</a></li>-->
           </ul>
           <!--</div> &lt;!&ndash;   end of sidebar&ndash;&gt;-->
           </div>
