--- a/app/views/role/customers/show.html.erb
+++ b/app/views/role/customers/show.html.erb
@@ -1,2 +1,17 @@
 <h1>Role::Customers#show</h1>
-<p>Find me in app/views/role/customers/show.html.erb</p>
+
+<%# for profile in @profiles  %>
+      <!--<tr>-->
+        <!--<td><%#= @profiles[:first_name]=='first_name' %></td>-->
+        <!--<td><%#= @profile[:last_name] %></td>-->
+      <!--</tr>-->
+<!--<%# end%>-->
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<%= link_to 'Back', role_customers_url %>
+
+
+  <%#= render 'partials/customer_info_table' %>
+
