--- a/app/views/plant_managements/_plant_info_table.html.erb
+++ b/app/views/plant_managements/_plant_info_table.html.erb
@@ -5,7 +5,7 @@
     <table class="table table-bordered table-hover table-striped">
       <thead>
       <tr>
-        <th>Plant Id #</th>
+        <th>Plant Id but here for testing purpose  I used current_user_id#</th>
         <th>Company Name</th>
         <th>email</th>
         <th>Phone No.</th>
@@ -21,56 +21,22 @@
       <tr>
         <!--<td><%#=link_to(order.invoice_id , order)%></td>-->
 
-        <td>3326</td>
-        <td>Incepta GmbH</td>
-        <td>incepta@rocket.de</td>
-        <td>015166705921</td>
-        <td>am treptower park 16, 19329 berlin </td>
-        <td>24errqq123</td>
-        <td><%= link_to 'Edit', edit_plant_management_path(current_user)  %></td>
+
+
+        <% @plants.each do |key, value| %>
+            <td><%=  "#{value}" %></td>
+
+        <% end %>
+        <td><%= link_to "Show", plant_management_path(@plants[:id]) %></td>
+        <td><%= link_to "Edit",  edit_plant_management_path(@plants[:id]) %></td>
+        <td><%= link_to "Remove", plant_management_path(@plants[:id]), method: :delete, data: { confirm: "Are you sure?" } %></td>
+
       </tr>
-      <tr>
-        <td>3325</td>
-        <td>10/21/2013</td>
-        <td>3:20 PM</td>
-        <td>$234.34</td>
-      </tr>
-      <tr>
-        <td>3324</td>
-        <td>10/21/2013</td>
-        <td>3:03 PM</td>
-        <td>$724.17</td>
-      </tr>
-      <tr>
-        <td>3323</td>
-        <td>10/21/2013</td>
-        <td>3:00 PM</td>
-        <td>$23.71</td>
-      </tr>
-      <tr>
-        <td>3322</td>
-        <td>10/21/2013</td>
-        <td>2:49 PM</td>
-        <td>$8345.23</td>
-      </tr>
-      <tr>
-        <td>3321</td>
-        <td>10/21/2013</td>
-        <td>2:23 PM</td>
-        <td>$245.12</td>
-      </tr>
-      <tr>
-        <td>3320</td>
-        <td>10/21/2013</td>
-        <td>2:15 PM</td>
-        <td>$5663.54</td>
-      </tr>
-      <tr>
-        <td>3319</td>
-        <td>10/21/2013</td>
-        <td>2:13 PM</td>
-        <td>$943.45</td>
-      </tr>
+
+
+
+
+
       </tbody>
     </table>
   </div>
