--- a/app/views/invoices/_invoices_side_nav.html.erb
+++ b/app/views/invoices/_invoices_side_nav.html.erb
@@ -8,9 +8,8 @@
 
     <ul >
           <li><a href="#" class="invoice-info">List all invoice</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit invoice", edit_invoice_path(current_user) %></a></li>
-          <li><a href="#">View all Product</a></li>
-          <li><a href="#">Edit Product</a></li>
+          <li><a href="#" class="default-view"> <%= link_to "Edit invoice", edit_invoice_path(@invoices[:id]) %></a></li>
+          <li><a href="#">Create invoice</a></li>
           </ul>
 
 
