--- a/app/views/plant_managements/edit.html.erb
+++ b/app/views/plant_managements/edit.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Back', plant_managements_url %>
 
 <% provide(:title, ' Plant Management') %>
-<h1>Update customer info</h1>
+<h1>Update plant info</h1>
 
 <%= form_tag plant_management_path, method:"post" do %>
 
@@ -18,12 +18,6 @@
 
         <div><%= label_tag :address %><br />
           <%= text_field_tag :address,params[:address], :placeholder => "Address" %></div>
-
-
-        <!--<div><%#= label_tag :role %><br />-->
-        <!--<%#= select_tag :role, options_for_select(['Super admin','Admin','Customer Support', 'Marketing','Shift Supervisor', 'Driver','Others', 'Select Roles'],'Select Roles') %>-->
-
-        <!--</div>-->
       </div>
 
       <div>
