fixes  for ticket- JFADM-9

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,14 +4,14 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
     <ul>
-      <% if signed_in %>
+      <%# if signed_in %>
           <li><%= link_to "List of Orders" %></li>
           <li><a href=""> Edit Orders</a></li>
           <li><a href=""></a></li>
           </ul>
           </div>
 
-      <% end %>
+      <%# end %>
 
 
       </div>
