--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>Orders#edit</h1>
-<p>Find me in app/views/orders/edit.html.erb</p>
+<%= link_to 'Back', orders_url %>
+
+<% provide(:title, ' Order Management') %>
+
+
+<%= form_tag order_path, method: "post" do %>
+
+    <fieldset>
+      <div>
+
+        <!--<div><%#= label_tag :user %><br/>-->
+          <%#= text_field_tag :user_id, params[:user_id], :placeholder => "User Id" %>
+      <!--</div>-->
+
+        <div><%= label_tag :vat %><br/>
+          <%= text_field_tag :vat, params[:vat], :placeholder => "%Vat" %></div>
+
+        <div><%= label_tag :total_amount %><br/>
+          <%= text_field_tag :total_amount, params[:total_amount], :placeholder => "Total amount" %></div>
+      </div>
+
+      <div><%= label_tag :currency %><br/>
+        <%= text_field_tag :currency, params[:currency], :placeholder => "Insert currency" %>
+      </div>
+<br>
+      <div>
+        <%= submit_tag "Save changes", class: "btn btn-primary" %>
+      </div>
+    </fieldset>
+
+<% end %>
+
+
+
