view a specific order  for ticket- JFADM-10

--- a/app/views/orders/_list_order.html.erb
+++ b/app/views/orders/_list_order.html.erb
@@ -5,16 +5,16 @@
     <table class="table table-bordered table-hover table-striped">
       <thead>
       <tr>
-        <th>Order Id #</th>
+        <th>Order Id </th>
         <th>User Id</th>
         <th>Tenant id</th>
         <th>Vat(%)</th>
         <th>Currency</th>
         <th>Total amount</th>
         <th>Invoice Id</th>
-        <th>#</th>
-        <th>#</th>
-        <th>#</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
       </thead>
 
