--- a/app/views/plant_managements/_plants_side_nav.html.erb
+++ b/app/views/plant_managements/_plants_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li><a href="#" class="plant-info">List of plants</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit plant", edit_plant_management_path(current_user) %></a></li>
+          <li><a href="#" class="default-view"> <%= link_to "Edit plant", edit_plant_management_path(@plants[:id]) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
