--- a/app/views/driver_managements/_drivers_side_nav.html.erb
+++ b/app/views/driver_managements/_drivers_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li><a href="#" class="driver-info">List all driver info</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit driver info", edit_driver_management_path(current_user) %></a></li>
+          <li><a href="#" class="default-view"> <%= link_to "Edit driver info", edit_driver_management_path(@drivers[:id]) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
