--- a/app/views/country_managements/edit.html.erb
+++ b/app/views/country_managements/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>CountryManagements#edit</h1>
-<p>Find me in app/views/country_managements/edit.html.erb</p>
+<%= link_to 'Back', country_managements_url %>
+
+<% provide(:title, ' Driver Management') %>
+<h1>Update Driver info</h1>
+
+<%= form_tag country_management_path, method:"post" do %>
+
+    <fieldset>
+      <div>
+        <div><%=  label_tag :name %><br />
+          <%= text_field_tag :name, params[:name], :placeholder => "Country name" %></div>
+
+        <div><%=  label_tag :code %><br />
+          <%= text_field_tag :code, params[:code], :placeholder => "country code" %></div>
+
+      </div>
+      <br>
+      <div>
+        <%= submit_tag "Save changes" ,class: "btn btn-primary"%>
+      </div>
+    </fieldset>
+
+
+<% end %>
+
+
+
+
