fixes for ticket- JFADM-17, JFADM-18

--- a/app/views/province_managements/edit.html.erb
+++ b/app/views/province_managements/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>ProvinceManagements#edit</h1>
-<p>Find me in app/views/province_managements/edit.html.erb</p>
+<%= link_to 'Back', province_managements_url %>
+
+<% provide(:title, ' Province Management') %>
+<h1>Update Province info</h1>
+
+<%= form_tag province_management_path, method:"post" do %>
+
+    <fieldset>
+      <div>
+        <div><%=  label_tag :name %><br />
+          <%= text_field_tag :name, params[:name], :placeholder => "Province name" %></div>
+
+        <div><%=  label_tag :slug %><br />
+          <%= text_field_tag :slug, params[:slug], :placeholder => "Slug" %></div>
+
+      </div>
+      <br>
+      <div>
+        <%= submit_tag "Save changes" ,class: "btn btn-primary"%>
+      </div>
+    </fieldset>
+
+
+<% end %>
+
+
+
+
