--- a/app/views/province_managements/_province_side_nav.html.erb
+++ b/app/views/province_managements/_province_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li><a href="#" class="province-info">List of all province</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit province", edit_province_management_path(current_user) %></a></li>
+          <li><a href="#" class="default-view"> <%#= link_to "Edit province", edit_province_management_path() %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
