--- a/app/views/city_managements/_city_side_nav.html.erb
+++ b/app/views/city_managements/_city_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li><a href="" class="city-info">City Info</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="" class="default-view"> <%= link_to "Edit city info", edit_city_management_path(current_user) %></a></li>
+          <li><a href="" class="default-view"> <%= link_to "Edit city info", edit_city_management_path(@cities[:id]) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
