--- a/app/views/postal_managements/_postal_side_nav.html.erb
+++ b/app/views/postal_managements/_postal_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li><a href="#" class="postal-info">List all postal info</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit postal info", edit_postal_management_path(current_user) %></a></li>
+          <li><a href="#" class="default-view"> <%= link_to "Edit postal info", edit_postal_management_path(@postals[:id]) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
