--- a/app/views/time_window_managements/_time_windows_side_nav.html.erb
+++ b/app/views/time_window_managements/_time_windows_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li><a href="#" class="order-info">List all orders</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit orders", edit_order_path(current_user) %></a></li>
+          <li><a href="#" class="default-view"> <%= link_to "Edit orders", edit_order_path(@time_windows[:id]) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
