Temporary  modification of Admin app for testing purpose

--- a/app/views/driver_managements/edit.html.erb
+++ b/app/views/driver_managements/edit.html.erb
@@ -17,7 +17,7 @@
           <%= phone_field_tag :phone_no, params[:phone_no], :placeholder => "Phone" %></div>
 
         <div><%= label_tag :status %><br />
-          <%= text_field_tag :enabled,params[:enabled], :placeholder => "Status" %></div>
+          <%= text_field_tag :enabled,params[:enabled], :placeholder => "Enabled/disabled" %></div>
       </div>
 
       <div>
