--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,7 +23,7 @@
       <ul class="nav navbar-nav ">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", '#' %></li>
-        <% if signed_in %>
+        <%# if signed_in %>
             <ul class="nav navbar-nav">
               <li><%= link_to "Profile" %></li>
               <li><%= link_to "Settings", '#' %></li>
@@ -31,7 +31,7 @@
               <li><%=link_to " Register user", new_role_super_admin_dashboard_path %></li>
               <li><%= link_to "Log out", '/logout', method:"delete" %></li>
             </ul>
-        <% else %>
+        <%# else %>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#services">SERVICES</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -39,7 +39,7 @@
             <li><a href="#contact">CONTACT</a></li>
             <li><%= link_to "Login", '/login' %></li>
 
-        <% end %>
+        <%# end %>
         </ul>
         </div>
 
