--- a/app/views/trip_managements/_trip_side_nav.html.erb
+++ b/app/views/trip_managements/_trip_side_nav.html.erb
@@ -8,7 +8,7 @@
 
     <ul >
           <li><a href="#" class="trip-info">Trips info</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit trips", edit_trip_management_path(current_user) %></a></li>
+          <li><a href="#" class="default-view"> <%= link_to "Edit trips", edit_trip_management_path(@trips[:id]) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
