--- a/app/views/schedule_managements/index.html.erb
+++ b/app/views/schedule_managements/index.html.erb
@@ -1,2 +1,6 @@
-<h1>ScheduleManagements#index</h1>
-<p>Find me in app/views/schedule_managements/index.html.erb</p>
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<%= render 'schedules_side_nav' %>
+<%= render 'schedules_info_table' %>
